# grpc-simulation

./: .gitignore  Cargo.toml  build.rs  readme.md
proto/: request.proto  response.proto  service.proto
src/: lib.rs  main.rs  service.rs
src/test/: service_test.rs
