[package]
name = "grpc_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
prost = "0.12"
async-stream = "0.3.6"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.11"
